<resources>
    <string name="app_name">Parepan</string>
    <string name="title_activity_main">Parepan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="continue_action">Продолжить</string>
    <string name="thanks">Спасибо</string>

    // [FOR NAVIGATION MENU]
    <string name="nav_main_text">Главное меню</string>
    <string name="nav_book_text">Журналы</string>
    <string name="nav_schedule_text">Расписание</string>
    <string name="nav_login_text">Изменить школу</string>

    // [FOR LOGIN ACTIVITY]
    <string name="login_but_confirm">Подтверждаю</string>
    <string name="login_text_city">Выберите ваш город:</string>
    <string name="login_text_school">Выберите вашу школу:</string>
    <string name="login_text_title">Пожалуйста, выберите школу и город</string>
    <string name="login_floating_city">Спасибо, вы выбрали город</string>
    <string name="login_floating_school">Спасибо, вы выбрали школу</string>
    <string name="login_your_data">Спасибо, ваши данные сохранены</string>


    // [FOR WELCOME FRAGMENT]
    <string name="scheduleTitle">Расписание</string>
    <string name="inDevelop">В разработке..</string>
    <string name="bookTitle">Журналы</string>
    <string name="bookText">Нажмите сюда, чтобы читать</string>

    // [FOR MAGAZINES CELLS]
    <string name="views">Просмотров</string>

    // TEST
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
