<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_main"
            android:title="@string/nav_main_text" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_welcome_book"
            android:title="@string/nav_book_text" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_welcome_schedule"
            android:title="@string/nav_schedule_text" />
        <item
            android:id="@+id/nav_homework"
            android:icon="@drawable/ic_welcome_homework"
            android:title="@string/homeworkTitle" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_login_text" />
    </group>

</menu>
