<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:objectId="@+objectId/bookCard"
            android:elevation="3dp"
            android:background="@android:color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_welcome_book"
                android:objectId="@+objectId/bookImage"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" />

            <TextView
                android:text="@string/bookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/bookTitle"
                android:textAlignment="center"
                android:layout_marginTop="120dp"
                android:textSize="24sp"
                android:textColor="#212121" />

            <TextView
                android:text="@string/bookText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/bookText"
                android:textAlignment="center"
                android:layout_marginTop="148dp"
                android:textSize="10sp"
                android:textColor="@android:color/holo_blue_dark" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:elevation="3dp"
            android:background="@android:color/white"
            android:objectId="@+objectId/scheduleCard">

            <TextView
                android:text="@string/inDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/scheduleText"
                android:textAlignment="center"
                android:layout_marginTop="148dp"
                android:textSize="10sp"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:text="@string/scheduleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/scheduleTitle"
                android:textAlignment="center"
                android:layout_marginTop="120dp"
                android:textSize="24sp"
                android:textColor="#212121" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_welcome_schedule"
                android:objectId="@+objectId/scheduleImage"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:elevation="3dp"
            android:background="@android:color/white">

            <TextView
                android:text="@string/inDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/textView6"
                android:textAlignment="center"
                android:layout_marginTop="120dp"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_welcome_indev"
                android:objectId="@+objectId/imageView6"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" />

            <TextView
                android:text="@string/inDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/textView7"
                android:textAlignment="center"
                android:layout_marginTop="148dp"
                android:textSize="10sp"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:elevation="3dp"
            android:background="@android:color/white">

            <TextView
                android:text="@string/inDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/textView12"
                android:textAlignment="center"
                android:layout_marginTop="148dp"
                android:textSize="10sp"
                android:textColor="@color/colorPrimary" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_welcome_indev"
                android:objectId="@+objectId/imageView7"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" />

            <TextView
                android:text="@string/inDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/textView8"
                android:textAlignment="center"
                android:layout_marginTop="120dp"
                android:textSize="24sp"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:elevation="3dp"
            android:background="@android:color/white">

            <TextView
                android:text="@string/inDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/textView14"
                android:textAlignment="center"
                android:layout_marginTop="148dp"
                android:textSize="10sp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:text="@string/inDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/textView11"
                android:textAlignment="center"
                android:layout_marginTop="120dp"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_welcome_indev"
                android:objectId="@+objectId/imageView9"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:elevation="3dp"
            android:background="@android:color/white">

            <TextView
                android:text="@string/inDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/textView13"
                android:textAlignment="center"
                android:layout_marginTop="148dp"
                android:textSize="10sp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:text="@string/inDevelop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:objectId="@+objectId/textView10"
                android:textAlignment="center"
                android:layout_marginTop="120dp"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_welcome_indev"
                android:objectId="@+objectId/imageView8"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>